added flow chart to readme